# Pokedex

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
WORKSPACE/agency_confirmation_log/: PHYSICAL_PROOF.txt  TESTING_STRATEGY_AND_RESULTS.md  generate_proof.sh  interface_design.md
crates/api/: Cargo.toml
crates/api/src/: client.rs  lib.rs  streaming.rs
crates/bridge/: Cargo.toml
crates/bridge/src/: lib.rs
crates/buddy/: Cargo.toml
crates/buddy/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  oauth_flow.rs  system_prompt.txt
crates/commands/: Cargo.toml
crates/commands/src/: lib.rs  named_commands.rs
crates/core/: Cargo.toml
crates/core/src/: analytics.rs  attachments.rs  auto_mode.rs  bash_classifier.rs  cloud_session.rs  crypto_utils.rs  effort.rs  feature_gates.rs  file_history.rs  format_utils.rs  git_utils.rs  keybindings.rs  lib.rs  lsp.rs  memdir.rs  message_utils.rs  migrations.rs  oauth_config.rs  output_styles.rs  pokedexmd.rs  prompt_history.rs  remote_session.rs  remote_settings.rs  session_storage.rs  settings_sync.rs  status_notices.rs  system_prompt.rs  team_memory_sync.rs  tips.rs  token_budget.rs  truncate.rs  voice.rs
crates/core/tests/: parity_smoke.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: connection_manager.rs  lib.rs  oauth.rs  registry.rs
crates/mempalace/: Cargo.toml
crates/mempalace/src/: lib.rs  palace.rs  search.rs  storage.rs
crates/plugins/: Cargo.toml
crates/plugins/src/: hooks.rs  lib.rs  loader.rs  manifest.rs  marketplace.rs  plugin.rs  registry.rs
crates/query/: Cargo.toml
crates/query/src/: agent_tool.rs  auto_dream.rs  away_summary.rs  command_queue.rs  compact.rs  context_analyzer.rs  coordinator.rs  cron_scheduler.rs  lib.rs  session_memory.rs  skill_prefetch.rs
crates/server/: Cargo.toml
crates/server/src/: handlers.rs  main.rs  state.rs
crates/swarm/: Cargo.toml
crates/swarm/src/: db.rs  events.rs  lib.rs  llm.rs  orchestrator.rs  persona_loader.rs  pokeball.rs
crates/tools/: Cargo.toml
crates/tools/src/: agent_tool.rs  ask_user.rs  bash.rs  brief.rs  browser.rs  bundled_skills.rs  computer_use.rs  config_tool.rs  container_bash.rs  credential_governance.rs  cron.rs  enter_plan_mode.rs  exit_plan_mode.rs  file_edit.rs  file_read.rs  file_write.rs  glob_tool.rs  grep_tool.rs  lib.rs  lsp_tool.rs  mcp_auth_tool.rs  mcp_resources.rs  mem_palace_tool.rs  notebook_edit.rs  powershell.rs  remote_trigger.rs  repl_tool.rs  send_message.rs  skill_tool.rs  sleep.rs  synthetic_output.rs  tasks.rs  team_tool.rs  todo_write.rs  tool_search.rs  wasm_container.rs  web_fetch.rs  web_search.rs  worktree.rs
crates/tui/: Cargo.toml
crates/tui/src/: agents_view.rs  app.rs  bridge_state.rs  bypass_permissions_dialog.rs  clawd.rs  context_viz.rs  desktop_upsell_startup.rs  dialogs.rs  diff_viewer.rs  elicitation_dialog.rs  export_dialog.rs  feedback_survey.rs  figures.rs  hooks_config_menu.rs  image_paste.rs  input.rs  invalid_config_dialog.rs  lib.rs  mcp_view.rs  memory_file_selector.rs  memory_update_notification.rs  model_picker.rs  notifications.rs  onboarding_dialog.rs  overage_upsell.rs  overlays.rs  plugin_views.rs  privacy_screen.rs  prompt_input.rs  render.rs  session_browser.rs  settings_screen.rs  stats_dialog.rs  theme_screen.rs  virtual_list.rs  voice_mode_notice.rs
crates/tui/src/messages/: markdown.rs  mod.rs
crates/tui/tests/: diff_viewer.rs  render_snapshots.rs
docs/: 00_overview.md  01_core_entry_query.md  02_commands.md  03_tools.md  04_components_core_messages.md  05_components_agents_permissions_design.md  06_services_context_state.md  07_hooks.md  08_ink_terminal.md  09_bridge_cli_remote.md  10_utils.md  11_special_systems.md  12_constants_types.md  13_rust_codebase.md  INDEX.md
promptfoo/: model_scores.json  promptfooconfig.yaml
promptfoo/prompts/: analytical_task.txt  creative_task.txt  engineering_task.txt  management_task.txt
scratch/: dump_gemini_sse.rs  test_deser.rs
scratch_sse/: Cargo.toml
scratch_sse/src/: main.rs
scripts/: dev.ps1  setup-container.ps1
web/: README.md  package-lock.json  package.json  vite.config.ts
web/src/: app.html
web/src/lib/: types.ts
web/src/lib/components/: AgentCard.svelte  ChatFeed.svelte  ForceGraph.svelte  GoalInput.svelte  WorkflowBar.svelte
web/src/lib/stores/: swarm.svelte.ts  websocket.svelte.ts
web/src/routes/: +layout.svelte  +page.svelte  layout.css
web/src/routes/swarm/[id]/: +page.svelte
