[package]
name = "pokedex-api"
version.workspace = true
edition.workspace = true

[dependencies]
pokedex-core = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
async-trait = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
