[package]
name = "pokedex-api"
version.workspace = true
edition.workspace = true

[dependencies]
pokedex-core = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
reqwest-eventsource = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
derive_builder = "0.20"
