[package]
name = "pokedex-bridge"
version.workspace = true
edition.workspace = true

[dependencies]
pokedex-core = { workspace = true }
pokedex-api = { workspace = true }
pokedex-query = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
parking_lot = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
tokio-util = { workspace = true }
regex = { workspace = true }
hostname = "0.4"
