[package]
name = "pokedex-code"
version.workspace = true
edition.workspace = true

[[bin]]
name = "pokedex"
path = "src/main.rs"

[dependencies]
pokedex-core = { workspace = true, features = ["voice"] }
pokedex-api = { workspace = true }
pokedex-tools = { workspace = true }
pokedex-query = { workspace = true }
pokedex-tui = { workspace = true }
pokedex-commands = { workspace = true }
pokedex-mcp = { workspace = true }
pokedex-bridge = { workspace = true }
pokedex-plugins = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
tokio-util = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
crossterm = { workspace = true }
parking_lot = { workspace = true }
dirs = { workspace = true }
nix = { workspace = true }

