[package]
name = "pokedex-core"
version.workspace = true
edition.workspace = true

[features]
# Enable real microphone capture via cpal.
# Without this feature the VoiceRecorder compiles but start_recording()
# returns an error instead of accessing hardware.
voice = ["dep:cpal"]

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
indexmap = { workspace = true }
regex = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
getrandom = { workspace = true }
url = { workspace = true }
schemars = { workspace = true }
reqwest = { workspace = true }
urlencoding = { workspace = true }
glob = { workspace = true }
tokio-util = { workspace = true }
# Optional: real audio capture for voice input (gated behind the `voice` feature)
cpal = { version = "0.15", optional = true }

[dev-dependencies]
tempfile = { workspace = true }
