[package]
name = "pokedex-mcp"
version.workspace = true
edition.workspace = true

[dependencies]
pokedex-core = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
parking_lot = { workspace = true }
tokio-util = { workspace = true }
dashmap = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
once_cell = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true }
urlencoding = { workspace = true }
