[package]
name = "pokedex-mempalace"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
rusqlite.workspace = true
rust-stemmers.workspace = true
tracing.workspace = true
tokio.workspace = true
async-trait.workspace = true
dashmap.workspace = true
