[package]
name = "pokedex-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "pokedex-server"
path = "src/main.rs"

[dependencies]
pokedex-swarm = { path = "../swarm" }
pokedex-core = { workspace = true }
axum = { version = "0.7", features = ["ws"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tower-http = { version = "0.5", features = ["cors", "fs"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
dotenvy = "0.15.7"
