[package]
name = "pokedex-swarm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
pokedex-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
walkdir = { workspace = true }
glob = { workspace = true }
futures = { workspace = true }
agdb = { version = "0.12", features = ["serde"] }
dirs.workspace = true
async-openai = { version = "0.34.0", features = ["full", "rustls"] }
clap = { workspace = true, features = ["derive"] }
colored = "3.1.1"
dotenvy = "0.15.7"
reqwest = { workspace = true, features = ["json"] }
pokedex-mempalace = { workspace = true }
pokedex-api = { workspace = true }
pokedex-query = { workspace = true }
pokedex-tools = { workspace = true }
parking_lot = { workspace = true }
tokio-util = { workspace = true }
