[package]
name = "pokedex-tui"
version.workspace = true
edition.workspace = true

[dependencies]
pokedex-core = { workspace = true }
pokedex-api = { workspace = true }
pokedex-tools = { workspace = true }
pokedex-query = { workspace = true }
pokedex-mcp = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
unicode-width = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
dirs = { workspace = true }
similar = { workspace = true }
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-fancy"] }
once_cell = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
